<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.cremate_gamings.tictactoe.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:text="@string/x"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/pfeil_left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:text="@string/y"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:tag="0"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button"
        android:tag="1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button2"
        android:tag="2"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:tag="3"
        android:layout_marginTop="23dp"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button4"
        android:tag="4"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button6"
        android:tag="5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignTop="@+id/button5"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />
    <Button
        android:id="@+id/button7"
        android:tag="6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4"
        android:layout_marginTop="23dp"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />
    <Button
        android:id="@+id/button8"
        android:tag="7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button7"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />
    <Button
        android:id="@+id/button9"
        android:tag="8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button8"
        android:background="@android:color/holo_green_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="30dp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/the_winner_is"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button10"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/material_deep_teal_500"
        android:text="@string/reset"
        android:visibility="invisible"
        android:layout_above="@+id/button8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_in"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/button8"
        android:layout_alignRight="@+id/button8"
        android:layout_alignEnd="@+id/button8"
        android:layout_marginTop="28dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10" />

</RelativeLayout>
